inbox: Fix archived icon spacing

--- a/web/styles/inbox.css
+++ b/web/styles/inbox.css
@@ -404,7 +404,7 @@
 
     .inbox-header-stream-archived {
         color: var(--color-text-message-header-archived);
-	margin-left: 4px;
+        margin-left: 4px;
     }
 }
 
@@ -787,7 +787,12 @@
             );
         }
     }
-#inbox-pane #inbox-list .inbox-header .inbox-header-name .inbox-header-stream-archived {
-    margin-left: 6px; 
-}
+
+    #inbox-pane
+        #inbox-list
+        .inbox-header
+        .inbox-header-name
+        .inbox-header-stream-archived {
+        margin-left: 4px;
+    }
 }
